@@ -1,1 +1,4 @@
-EXTRA_DIST = mtpfs.xml popper_notifications.xml use_label_as_mountpoint.xml
+EXTRA_DIST = mtpfs.xml popper_notifications.xml use_label_as_mountpoint.xml \
+  umount_from_tray.xml
+
+dist_bin_SCRIPTS = halevt_umount_from_tray.sh
